<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_banyuan"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvPingBi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="18dp"
        android:textSize="18sp"
        android:paddingTop="18dp"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingBottom="18dp"
        android:textColor="#212121"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_pingvis"
        android:text="@string/pingvi"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F7F7F7"/>
    <TextView
        android:id="@+id/tvTouSu"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:drawablePadding="18dp"
        android:textSize="18sp"
        android:textColor="#212121"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/ic_toushusa"
        android:text="@string/toushua"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F7F7F7"/>
    <TextView
        android:id="@+id/tvQuXiao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#212121"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:text="@string/quxioass"/>
</LinearLayout>