<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_ios_tishi2">
    <com.my.path.app.weight.textview.MediumBoldTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="16dp"
        android:textSize="18dp"
        android:textColor="#212121"
        android:text="@string/service_yinsixieyi"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:paddingTop="16dp">
        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical"
          />
    </ScrollView>
    <View
        android:id="@+id/view_xian_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#F5F5F5"/>
    <Button
        android:id="@+id/bt_yes"
        android:layout_width="match_parent"
        android:layout_marginTop="36dp"
        android:layout_height="38dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/bg_button"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:text="@string/service_tongyi" />
    <TextView
        android:id="@+id/tv_on"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="18dp"
        android:paddingBottom="15dp"
        android:textColor="#6C6C6C"
        android:textSize="14dp"
        android:text="@string/service_butongyi"/>
</LinearLayout>