<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_doubanyuan"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_angengx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"
            android:paddingBottom="10dp"
            android:text="@string/zuixn"
            android:textColor="@drawable/bg_main_book_shaixuan_text_color"
            android:textSize="14sp" />

        <View
            android:layout_width="96dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="#fff7f7f7" />

        <TextView
            android:id="@+id/tv_anyuedupaixu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/zuire"
            android:textColor="@drawable/bg_main_book_shaixuan_text_color"
            android:textSize="14sp" />

        <View
            android:layout_width="96dp"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="#fff7f7f7" />

        <TextView
            android:id="@+id/tv_zuixinshouc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/tuijian"
            android:textColor="@drawable/bg_main_book_shaixuan_text_color"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>