<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">
    <data>
        <variable
            name="codeViewModel"
            type="com.my.path.viewmodel.state.CodeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F5" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textV23iew227"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yanmzndiasdae"
                android:textColor="#333333"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/edi23tText"
                style="@style/baseEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/yanzehndase"
                android:inputType="textEmailAddress"
                android:paddingStart="18dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="14sp"
                android:text="@={codeViewModel.verificationCode}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textV23iew227"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvSend"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/fasonyanzmdase"
                android:textColor="#FF544C"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/edi23tText"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#F5F5F5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/llPwd"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textV23iew22711"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mimadawesadse"
                    android:hint="账号啊"
                    android:textColor="#333333"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:id="@+id/edi23tText222"
                    style="@style/baseEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/mimasidaesdd"
                    android:inputType="textEmailAddress"
                    android:paddingStart="18dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textSize="14sp"
                    android:text="@={codeViewModel.password}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/textV23iew22711"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/imageVisadew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/keyvisibily_selector"
                    app:checkChange="@{codeViewModel.passwordChecked}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:background="#F5F5F5" />
        </LinearLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18dp"
            android:paddingEnd="18dp">

            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:text="@string/yanzmenhdhsaje"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/textView31"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:gravity="center"
                android:text="@string/yoxuiangdaseasd"
                android:textColor="#9C9C9C"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>

